fix stylesheet and logos and colors

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -8,14 +8,24 @@
 		position: fixed;
     }
 }
+
+a {
+  color: #a41c30;
+}
+
+a:focus, a:hover {
+  color: #6D121F;
+}
+
 #toc {
 	width: 100%;
 	text-align: left;
 	max-height: 100%;
 	overflow-y: scroll;
+	background-color: #a41c30;
 }
 #logo{
-	 background-color: #C4112F;
+	 background: #a41c30;
 }
 body { 
 	padding-top: 115px; 
@@ -23,4 +33,9 @@ body {
 }
 html {
 	overflow: visible;
+}
+
+.list-group-item.active {
+  background-color: #a41c30;
+  border-color: #a41c30;
 }
