--- a/docs/toc.css
+++ b/docs/toc.css
@@ -9,7 +9,7 @@
 #TOC {
   line-height: 1;
   border-radius: 5px 5px 0 0;
-  background: #141414;
+  background-color: #a41c30;
   background: linear-gradient(to bottom, #333333 0%, #141414 100%);
   border-bottom: 2px solid #0fa1e0;
   width: auto;
